<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <Button
            android:id="@+id/singup_back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/gray_radius_box"
            android:text=" &lt; "
            android:textSize="17dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="회원가입"
            android:textColor="@color/black"
            android:textSize="17dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/id_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:inputType="text"
            android:text="@string/textview_id"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/singup_back_btn" />

        <EditText
            android:id="@+id/et_id"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/gray_radius_box"
            android:hint="@string/hint_id"
            android:imeOptions="actionNext"
            android:padding="5dp"
            android:textColor="#000000"
            android:textColorHint="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/id_tv" />

        <TextView
            android:id="@+id/required_id_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/required_id"
            android:textColor="@color/grayText"
            android:textSize="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_id" />

        <TextView
            android:id="@+id/pwd_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="* 비밀번호"
            android:textColor="#000000"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/required_id_tv" />

        <EditText
            android:id="@+id/et_pwd"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/gray_radius_box"
            android:hint="비밀번호를 입력해주세요"
            android:inputType="textPassword"
            android:padding="5dp"
            android:textColor="#000000"
            android:textColorHint="@color/grayText"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pwd_tv" />

        <TextView
            android:id="@+id/required_pwd_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/required_pwd"
            android:textColor="@color/grayText"
            android:textSize="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_pwd" />

        <TextView
            android:id="@+id/pwd_check_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="* 비밀번호 확인"
            android:textColor="#000000"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/required_pwd_tv" />

        <EditText
            android:id="@+id/et_pwd_check"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/gray_radius_box"
            android:hint="비밀번호를 한번더 입력해주세요"
            android:inputType="textPassword"
            android:padding="5dp"
            android:textColor="#000000"
            android:textColorHint="#000000"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pwd_check_tv" />

        <TextView
            android:id="@+id/required_pwd_check_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/required_check_pwd"
            android:textColor="@color/grayText"
            android:textSize="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_pwd_check" />

        <TextView
            android:id="@+id/name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="* 이름"
            android:textColor="#000000"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/required_pwd_check_tv" />

        <EditText
            android:id="@+id/name_et"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/gray_radius_box"
            android:hint="이름을 입력해주세요"
            android:inputType="text"
            android:padding="5dp"
            android:textColor="#000000"
            android:textColorHint="#000000"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name_tv" />

        <TextView
            android:id="@+id/email_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="* 이메일"
            android:textColor="#000000"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name_et" />

        <EditText
            android:id="@+id/email_et"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/gray_radius_box"
            android:hint="예) dataflow@dataflow.co.kr"
            android:inputType="textEmailAddress"
            android:padding="5dp"
            android:textColor="#000000"
            android:textColorHint="#000000"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email_tv" />

        <TextView
            android:id="@+id/phone_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="* 전화번호"
            android:textColor="#000000"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email_et" />

        <EditText
            android:id="@+id/phone_et"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginHorizontal="20dp"
            android:layout_weight="2"
            android:background="@drawable/gray_radius_box"
            android:hint="숫자만 입력해주세요"
            android:inputType="number"
            android:padding="5dp"
            android:textColor="#000000"
            android:textSize="20dp"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/phone_tv" />

        <TextView
            android:id="@+id/certification_check_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/certification"
            android:textColor="@color/grayText"
            android:textSize="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phone_et" />

        <TextView
            android:id="@+id/address_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="* 주소"
            android:textColor="#000000"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/certification_check_error" />

        <TextView
            android:id="@+id/simple_address_tv"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/gray_radius_box"
            android:padding="5dp"
            android:text="도로명, 지번, 건물명 검색"
            android:textColor="#000000"
            android:textColorHint="#000000"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/address_tv" />

        <EditText
            android:id="@+id/detail_address_et"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/gray_radius_box"
            android:hint="@string/address_detail"
            android:padding="5dp"
            android:textColor="#000000"
            android:textColorHint="#000000"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/simple_address_tv" />

        <TextView
            android:id="@+id/date_of_birth_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:inputType="text"
            android:text="* 생년월일"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detail_address_et" />


            <EditText
                android:id="@+id/birth_day"
                android:layout_marginHorizontal="20dp"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:hint="-없이 입력해주세요 예)19950203"
                android:background="@drawable/gray_radius_box"
                android:textColor="@color/grayText"
                app:layout_constraintTop_toBottomOf="@id/date_of_birth_tv"/>

        <TextView
            android:id="@+id/gender_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:inputType="text"
            android:text="* 성별"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/birth_day" />

        <RadioGroup
            android:id="@+id/gender_radio_group_rd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/gender_tv">

            <RadioButton
                android:id="@+id/gender_man_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="남성"
                android:textColor="#000000"
                app:layout_constraintStart_toStartOf="parent"
                 />

            <RadioButton
                android:id="@+id/gender_woman_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="여성"
                android:textColor="#000000"
                app:layout_constraintStart_toStartOf="parent"
                 />

        </RadioGroup>


        <View
            android:id="@+id/view_grey"
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:layout_marginTop="15dp"
            android:background="@color/gray"
            app:layout_constraintTop_toBottomOf="@+id/gender_radio_group_rd" />

        <TextView
            android:id="@+id/terms_of_use_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:inputType="text"
            android:text="* 이용약관"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_grey" />

        <TextView
            android:id="@+id/required_use_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/required_use"
            android:textColor="@color/grayText"
            android:textSize="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/terms_of_use_tv" />

        <CheckBox
            android:id="@+id/all_agree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="전체 동의합니다."
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/required_use_tv" />

        <View
            android:id="@+id/view_grey4_2"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_marginHorizontal="10dp"
            android:background="@color/gray"
            app:layout_constraintTop_toBottomOf="@+id/all_agree" />

        <CheckBox
            android:id="@+id/use_agree_cb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="이용약관 동의(필수)"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_grey4_2" />


        <CheckBox
            android:id="@+id/privacy_cb1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/privacy_agree"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/use_agree_cb" />

        <CheckBox
            android:id="@+id/privacy_cb2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/privacy_agree"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/privacy_cb1" />


        <CheckBox
            android:id="@+id/age_check_db"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:background="@drawable/custom_check_box"
            android:text="본인은 만 14세 이상입니다.(필수)"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/privacy_cb2" />

        <Button
            android:id="@+id/sign_up_finish"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="20dp"
            android:gravity="center"
            android:text="가입하기"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/age_check_db" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>